--- a/main.html
+++ b/main.html
@@ -7,17 +7,17 @@
 </head>
 
 <body>
-	<nav>
-        <a href="https://www.freecodecamp.org/learn">Home</a>
-        <a href="https://www.freecodecamp.org/news/about/">About us</a>
-        <a href="https://www.freecodecamp.org/news/support/">Contact us</a>
-    </nav>
+	<ul>
+        <li><a href="https://www.freecodecamp.org/learn">Home</a></li>
+        <li><a href="https://www.freecodecamp.org/news/about/">About us</a></li>
+        <li><a href="https://www.freecodecamp.org/news/support/">Contact us</a></li>
+    </ul>
 
     <h1>3 random audios</h1>
     <audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls></audio>
 
     <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
-    <audio src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3." controls></audio>
+    <audio src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls></audio>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
