--- a/main.html
+++ b/main.html
@@ -7,12 +7,13 @@
 </head>
 
 <body>
+	<nav>
 	<ul>
         <li><a href="https://www.freecodecamp.org/learn">Home</a></li>
         <li><a href="https://www.freecodecamp.org/news/about/">About us</a></li>
         <li><a href="https://www.freecodecamp.org/news/support/">Contact us</a></li>
     </ul>
-
+		</nav>
     <h1>3 random audios</h1>
     <audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls></audio>
 
